# muERP-backend

./: Cargo.toml  README.md  Rocket.toml
src/: main.rs
src/controllers/: batch.rs  item.rs  mod.rs  stock_out.rs
src/dao/: batch.rs  db.rs  item.rs  join_select_batches_and_items.sql  join_select_stock_in_and_items.sql  join_select_stock_out_and_items.sql  mod.rs  stock_out.rs
src/entities/: batch.rs  item.rs  mod.rs  stock_out.rs
src/models/: batch.rs  create_tables.sql  item.rs  prelude.rs  stock_out.rs
