[package]
name = "stocker-vue-backend"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "^0.5.0-rc.2", features = ["json"] }
rocket_okapi = { version = "^0.8.0-rc.2", features = ["swagger"] }
sea-orm = { version = "^0.9.1", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros"] }
